--- a/public/index.html
+++ b/public/index.html
@@ -444,6 +444,7 @@
     }
 
     function initAutocomplete() {
+      console.log('Gmaps scripts loaded');
       // Create the autocomplete object, restricting the search to geographical
       // location types.
       autocomplete = new google.maps.places.Autocomplete(
