--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       $("#locationInput").val(newValue);
       $("#locationInput2").val(newValue);
     });
-    
+
     $("#locationInput").keypress(function (e) {
       if (e.which === 13) {
         $('#console')[0].scrollIntoView(true);
@@ -188,8 +188,8 @@
   <!-- Navbar (sit on top) -->
   <div class="w3-top ">
     <div class="w3-bar " id="myNavbar">
-      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right w3-hide-small" href="javascript:void(0);" onclick="toggleFunction()"
-        title="Toggle Navigation Menu">
+      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right w3-hide-small" href="javascript:void(0);"
+        onclick="toggleFunction()" title="Toggle Navigation Menu">
         <i class="fa fa-bars"></i>
       </a>
       <a href="#home" class="w3-bar-item w3-button w3-hide-small">नक्शा </a>
@@ -200,7 +200,7 @@
     </div>
 
     <!-- Navbar on small screens -->
-    
+
   </div>
 
   <!-- First Parallax Image with Logo Text -->
@@ -211,8 +211,7 @@
     <br/>
     <br/>
     <div class="w3-display-middle" style="white-space:nowrap; width:80%; margin-top: 150px;">
-      <input type="address" class="w3-input" placeholder="Search an area" id="locationInput" 
-      />
+      <input type="address" class="w3-input" placeholder="Search an area" id="locationInput" />
       <!-- onblur="updateLocationInput('locationInput');" -->
     </div>
   </div>
@@ -373,8 +372,7 @@
   <!-- <button onclick="showdata()" >Show Data </button> -->
   <div class="w3-content w3-container w3-padding-64" id="portfolio">
     <center>
-      <input type="address" class="w3-input" placeholder="Search an area" id="locationInput2"
-      />
+      <input type="address" class="w3-input" placeholder="Search an area" id="locationInput2" />
       <br/>
     </center>
     <center>
@@ -458,15 +456,15 @@
       //     document.getElementById(component).disabled = false;
       //   }
 
-        // Get each component of the address from the place details
-        // and fill the corresponding field on the form.
-        // for (var i = 0; i < place.address_components.length; i++) {
-        //   var addressType = place.address_components[i].types[0];
-        //   if (componentForm[addressType]) {
-        //     var val = place.address_components[i][componentForm[addressType]];
-        //     document.getElementById(addressType).value = val;
-        //   }
-        // }
+      // Get each component of the address from the place details
+      // and fill the corresponding field on the form.
+      // for (var i = 0; i < place.address_components.length; i++) {
+      //   var addressType = place.address_components[i].types[0];
+      //   if (componentForm[addressType]) {
+      //     var val = place.address_components[i][componentForm[addressType]];
+      //     document.getElementById(addressType).value = val;
+      //   }
+      // }
       // }
     }
 
@@ -529,12 +527,12 @@
             preferences,
           };
           console.log('fetching', JSON.stringify(reqObj));
-          fetch('http://localhost:5000/areas', {
+          fetch('/areas', {
             method: 'post',
             body: JSON.stringify(reqObj)
           }).then((res) => { console.log(res); return res.json(); })
             .then(obj => {
-                $('#cssLoader').hide("slow");
+              $('#cssLoader').hide("slow");
               $('#map').show("slow");
               console.log(latitude, longitude);
               console.log(obj.heatmaps);
