--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,28 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script>
   $(document).ready(function () {
+    $("#locationInput").change(function () {
+      var newValue = $("#locationInput").val();
+      console.log("onChange: ", newValue);
+      $("#locationInput").val(newValue);
+      $("#locationInput2").val(newValue);
+    });
+
     $("#locationInput").keypress(function (e) {
       if (e.which === 13) {
-
         $('#console')[0].scrollIntoView(true);
       }
+    });
+
+    $("#locationInput2").change(function () {
+      var newValue = $("#locationInput2").val();
+      console.log("onChange: ", newValue);
+      $("#locationInput").val(newValue);
+      $("#locationInput2").val(newValue);
     });
   });
   $(document).ready(function () {
     $("#navHomes").click(function () {
-
-
       $('#console')[0].scrollIntoView(true);
 
     });
@@ -45,10 +56,10 @@
       $('#cssLoader').show("slow");
       $('#cssLoader')[0].scrollIntoView(true);
 
-      setTimeout(() => {
-        $('#cssLoader').hide("slow");
-        $('#map').show("slow");
-      }, 8000);
+      // setTimeout(() => {
+      //   $('#cssLoader').hide("slow");
+      //   $('#map').show("slow");
+      // }, 8000);
 
 
     });
@@ -177,11 +188,11 @@
   <!-- Navbar (sit on top) -->
   <div class="w3-top ">
     <div class="w3-bar " id="myNavbar">
-      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()"
-        title="Toggle Navigation Menu">
+      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right w3-hide-small" href="javascript:void(0);"
+        onclick="toggleFunction()" title="Toggle Navigation Menu">
         <i class="fa fa-bars"></i>
       </a>
-      <a href="#home" class="w3-bar-item w3-button">नक्शा</a>
+      <a href="#home" class="w3-bar-item w3-button w3-hide-small">नक्शा </a>
       <a href="#console" class="w3-bar-item w3-button w3-hide-small">
         HOMES</a>
 
@@ -189,11 +200,7 @@
     </div>
 
     <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-      <a href="#console" class="w3-bar-item w3-button">HOMES</a>
-      <a href="#contact" class="w3-bar-item w3-button">OTHERS</a>
 
-    </div>
   </div>
 
   <!-- First Parallax Image with Logo Text -->
@@ -204,8 +211,8 @@
     <br/>
     <br/>
     <div class="w3-display-middle" style="white-space:nowrap; width:80%; margin-top: 150px;">
-      <input type="address" class="w3-input" placeholder="Search an area" id="locationInput" onblur="updateLocationInput('locationInput');"
-      />
+      <input type="address" class="w3-input" placeholder="Search an area" id="locationInput" />
+      <!-- onblur="updateLocationInput('locationInput');" -->
     </div>
   </div>
 
@@ -244,7 +251,7 @@
     </div>
   </div>
 
-  <div id="cssLoader" style="height: 1000px; background-color: white;">
+  <div id="cssLoader" style="height: 750px; background-color: white;">
     <div id="preloader">
       <div id="loader">
 
@@ -255,7 +262,7 @@
     </div>
 
   </div>
-  <div class=w3-container id="map" style="height: 1000px;"> </div>
+  <div class=w3-container id="map" style="height: 750px; overflow: hidden;"> </div>
   <br/>
   <br/>
 
@@ -365,8 +372,7 @@
   <!-- <button onclick="showdata()" >Show Data </button> -->
   <div class="w3-content w3-container w3-padding-64" id="portfolio">
     <center>
-      <input type="address" class="w3-input" placeholder="Search an area" id="locationInput2" onblur="updateLocationInput('locationInput2')"
-      />
+      <input type="address" class="w3-input" placeholder="Search an area" id="locationInput2" />
       <br/>
     </center>
     <center>
@@ -444,22 +450,22 @@
     function fillInAddress() {
       // Get the place details from the autocomplete object.
       var place = autocomplete.getPlace();
-      if (componentForm !== undefined) {
-        for (var component in componentForm) {
-          document.getElementById(component).value = '';
-          document.getElementById(component).disabled = false;
-        }
+      // if (componentForm !== undefined) {
+      //   for (var component in componentForm) {
+      //     document.getElementById(component).value = '';
+      //     document.getElementById(component).disabled = false;
+      //   }
 
-        // Get each component of the address from the place details
-        // and fill the corresponding field on the form.
-        for (var i = 0; i < place.address_components.length; i++) {
-          var addressType = place.address_components[i].types[0];
-          if (componentForm[addressType]) {
-            var val = place.address_components[i][componentForm[addressType]];
-            document.getElementById(addressType).value = val;
-          }
-        }
-      }
+      // Get each component of the address from the place details
+      // and fill the corresponding field on the form.
+      // for (var i = 0; i < place.address_components.length; i++) {
+      //   var addressType = place.address_components[i].types[0];
+      //   if (componentForm[addressType]) {
+      //     var val = place.address_components[i][componentForm[addressType]];
+      //     document.getElementById(addressType).value = val;
+      //   }
+      // }
+      // }
     }
 
     // Bias the autocomplete object to the user's geographical location,
@@ -484,14 +490,12 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHf7bfggJPlwwz98LjvpayBSKYaqulTe4&libraries=places,visualization&callback=initAutocomplete"
     async defer></script>
   <script type="text/javascript">
-    function updateLocationInput(id) {
-      setTimeout(function () {
-        const newValue = document.getElementById(id).value;
-        console.log(newValue);
-        document.getElementById('locationInput').value = newValue;
-        document.getElementById('locationInput2').value = newValue;
-      }, 20);
-    }
+    // function updateLocationInput(id) {
+    //   const newValue = document.getElementById(id).value;
+    //   console.log(newValue);
+    //   document.getElementById('locationInput').value = newValue;
+    //   document.getElementById('locationInput2').value = newValue;
+    // }
     function getLocation() {
       const addr = document.getElementById('locationInput2').value.length > 0 ?
         document.getElementById('locationInput2').value :
@@ -528,6 +532,8 @@
             body: JSON.stringify(reqObj)
           }).then((res) => { console.log(res); return res.json(); })
             .then(obj => {
+              $('#cssLoader').hide("slow");
+              $('#map').show("slow");
               console.log(latitude, longitude);
               console.log(obj.heatmaps);
               onSubmit(obj.heatmaps, latitude, longitude);
